@startuml step4

entity "clients" as clients {
  * id       : serial
  --
  name       : text
  address    : text
}

entity "products" as products {
  * id       : serial
  --
  name       : text
}

entity "orders" as orders {
  * id          : integer
  --
  client_ref    : integer  // FK -> clients.id
  order_date    : date
}

entity "order_items" as order_items {
  * order_ref    : integer  // FK -> orders.id
  * product_ref  : integer  // FK -> products.id
  --
  quantity       : integer
}

clients  ||--o{ orders       : "client_ref"
orders   ||--o{ order_items  : "order_ref"
products ||--o{ order_items  : "product_ref"

@enduml
